--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -1,32 +1,31 @@
-div(class='row')
-  table(ng-class='{"table table-striped" : !isProfile}', class='col-md-12')
-    tr(ng-repeat='user in filteredUsers = (users | filterSubject:selectedSubject | filterCategoriesInSubject:selectedSubject:selectedCategories)')
-      td(style='padding: 20px')
-        div(class='row')
-          div(class='col-sm-3', ng-hide='isProfile')
-            img(ng-src="/avatar/{{user._id}}", style='max-height:200px')
-          div(class='col-sm-9')
-            h1
-              a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.firstName + " " + user.lastName}}
-              span(ng-show='isProfile') {{user.username}}
-              md-button(class='md-fab md-primary',
-              ng-href='/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
-              aria-label='Email')
-                span(class='glyphicon glyphicon-comment')
-            div(ng-show='user.summary.degree.length > 0 && user.summary.summary.length > 0')
-              h2 Subjects
-              md-list
-                md-item(ng-repeat='subject in user.summary.summary')
-                  md-item-content
-                    div(md-tile-content)
-                      p {{subject.subject}} : {{subject.description}}
-              h2 Degree
-              md-list
-                md-item(ng-repeat='degree in user.summary.degree', class='md-padding')
-                  md-item-content
-                    | {{degree}}
-            div(ng-hide='user.summary.degree.length > 0 && user.summary.summary.length > 0')
-              h3 Profile is incomplete. Please edit your page.
+div(ng-repeat='user in filteredUsers = (users | filterSubject:selectedSubject | filterCategoriesInSubject:selectedSubject:selectedCategories)'
+class='row',
+ng-class-odd='{oddRow: !isProfile}',
+ng-class-even='{evenRow: !isProfile}')
+  div(class='col-sm-3', ng-hide='isProfile')
+    img(ng-src="/avatar/{{user._id}}", style='max-height:200px;margin:20px;display:block', class="img-rounded")
+  div(class='col-sm-9', style='display:table-cell')
+    h1
+      md-button(class='md-fab md-primary',
+      ng-href='/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
+      aria-label='Email')
+        span(class='glyphicon glyphicon-comment')
+      a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.firstName + " " + user.lastName}}
+      span(ng-show='isProfile') {{user.username}}
+    div(ng-show='user.summary.degree.length > 0 && user.summary.summary.length > 0')
+      h2 Subjects
+      md-list
+        md-item(ng-repeat='subject in user.summary.summary')
+          md-item-content
+            div(md-tile-content)
+              p {{subject.subject}} : {{subject.description}}
+      h2 Degree
+      md-list
+        md-item(ng-repeat='degree in user.summary.degree', class='md-padding')
+          md-item-content
+            | {{degree}}
+    div(ng-hide='user.summary.degree.length > 0 && user.summary.summary.length > 0')
+        h3 Profile is incomplete. Please edit your page.
 
 div(ng-show='filteredUsers.length == 0', class='row')
   md-content(class='md-padding')
