--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -1,4 +1,4 @@
-div.container
+div.container.editPage
   div.row(ng-show='thisIsMe')
     div.col-sm-12
       p Check here if the profile is complete
@@ -7,9 +7,10 @@ div.container
       ox-search-profile(users='[user]', is-profile='true')
     div.col-sm-4
       div(ng-repeat='item in uploader.queue')
-        div.crop(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
+        div.crop(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }",
+        style='max-height:200px;margin:20px;display:block', class='img-rounded')
       div(ng-hide='uploader.queue.length')
-        img(ng-src='{{img}}' style='max-height:200px')
+        img(ng-src='/avatar/{{imgSrc}}', style='max-height:200px;margin:20px;display:block', class="img-rounded")
       div(class="progress" style="")
         div(class="progress-bar", role="progressbar", ng-style="{ 'width': uploader.progress + '%' }")
       input(type='file', nv-file-select, uploader='uploader', id='selectFile', style='display:none')
